--- a/src/components/index.css
+++ b/src/components/index.css
@@ -29,17 +29,6 @@ p {
     background-color: blue;
 }
 
-.homeButton {
-
-}
-
-.displayButton {
-}
-
-.collectionButton {
-    
-}
-
 .webPage {
     display: flex;
     flex-direction: column;
@@ -155,14 +144,14 @@ p {
     padding: 15px;
 }
 
-.diego {
+.sktech {
     display: flex;
     height: 600px;
     width: 500px;
     padding: 15px;
 }
 
-.angel {
+.doit {
     display: flex;
     height: 500px;
     width: 850px;
