--- a/src/components/index.css
+++ b/src/components/index.css
@@ -135,7 +135,7 @@ p {
     align-items: space-around;
 }
 
-.rem {
+.start {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -144,7 +144,7 @@ p {
     padding: 15px;
 }
 
-.sktech {
+.sketch {
     display: flex;
     height: 600px;
     width: 500px;
@@ -158,7 +158,7 @@ p {
     padding: 15px;
 }
 
-.degasImage {
+.reserved {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -167,7 +167,7 @@ p {
     padding: 15px;
 }
 
-.loversImage {
+.smoker {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -176,7 +176,7 @@ p {
     padding: 15px;
 }
 
-.caballoImage {
+.power {
     display: flex;
     align-items: center;
     justify-content: center;
