--- a/src/components/index.css
+++ b/src/components/index.css
@@ -300,18 +300,21 @@ button {
 
 .page {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
     align-items: center;
     margin: auto;
     height: 100vh;
-    width: 100vh;
+    width: 100%;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    justify-content: middle;
-    align-items: center;
+}
+
+.switch {
+    display: flex;
+    padding-top: 150px;
 }
 
 .topRow {
