--- a/src/components/index.css
+++ b/src/components/index.css
@@ -17,10 +17,11 @@ p {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    width: 90%;
+    width: 50%;
     height: 75px;
     padding: 20px;
-    margin: 20px;
+    margin-top: 40px;
+    margin-bottom: 0px;
     color: blue;
     text-decoration: none;
     font-size: 20px;
@@ -90,7 +91,6 @@ p {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100px;
     text-decoration: none;
     color: lightskyblue;
 }
