--- a/src/components/index.css
+++ b/src/components/index.css
@@ -8,33 +8,17 @@ p {
 
 .container {
     display: flex;
-    justify-content: center;
     align-items: center;
     width: 100%;
 }
 
 .nav {
     display: flex;
-    justify-content: space-around;
-    align-items: center;
-    width: 50%;
+    width: 75px;
     height: 75px;
-    padding: 20px;
-    margin-top: 40px;
-    margin-bottom: 0px;
-    color: blue;
+    margin: 25px;
+    background-color: red;
     text-decoration: none;
-    font-size: 20px;
-    border-radius: 20px;
-    border: solid 3px lightskyblue;
-    background-color: blue;
-}
-
-.webPage {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
 }
 
 .fullContainer {
@@ -301,10 +285,16 @@ button {
 .page {
     display: flex;
     flex-direction: column;
-    align-items: center;
     margin: auto;
     height: 100vh;
     width: 100%;
+}
+
+.secondRowWebPage {
+    display: flex;
+    justify-content: right;
+    align-items: flex-end;
+    padding: 100px;
 }
 
 .container {
