--- a/src/components/index.css
+++ b/src/components/index.css
@@ -317,14 +317,14 @@ button {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: hotpink;
+    background-color: #7FC8F8;
 }
 
 .topLeftv2 {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: blueviolet;
+    background-color: #3F88C5;
 }
 
 .topMiddlev1 {
@@ -352,7 +352,7 @@ button {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: hotpink;
+    background-color: #7FC8F8;
 }
 
 .middleRow {
@@ -414,7 +414,7 @@ button {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: hotpink;
+    background-color: #7FC8F8;
 }
 
 .bottomMiddlev1 {
@@ -435,12 +435,12 @@ button {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: hotpink;
+    background-color: #7FC8F8;
 }
 
 .bottomRightv2 {
     display: flex;
     height: 125px;
     width: 125px;
-    background-color: blueviolet;
+    background-color: #3F88C5;
 }
