--- a/src/components/index.css
+++ b/src/components/index.css
@@ -419,3 +419,33 @@ button {
     height: 100vh;
     width: 100%;
 }
+
+.startPage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+.smokerPage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+.sketchPage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+.reservedPage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
+
+.powerPage {
+    display: flex;
+    height: 100vh;
+    width: 100%;
+}
